# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.130 2010-04-14 19:34:57 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.8 (2010/??/??)
 - (2010/04/14) Fixed bug#4999 - Cache of customer user get's not refreshed after
    a preferences get's changed.
 - (2010/04/13) Fixed bug#5152 - responsible_user_id in ticket table is wrong in
    otrs-database.dia.
 - (2010/04/12) Fixed Bug#5108 - The RSS date was not displayed correctly.
 - (2010/04/12) Fixed bug#5112 - Redirecting to a valid screen after unsubscribing a
    ticket that is on a queue in which the agent has no permissions.
 - (2010/04/06) Fixed bug#4986 - There is no activate/deactivate check for Graphsize menu,
    when page loads in Stats Definition.
 - (2010/04/01) Fixed bug#4786 - AgentTicketCompose ONLY: Defining a next state,
    then adding and attachment, resets the next state upon screen refresh.
 - (2010/03/29) Improved handling of the StateType attribute of
    StateGetStatesByType() in Kernel/System/State.pm.
 - (2010/03/24) Fixed bug#5164 - Pending time not working if agent as an other
    timezone.
 - (2010/03/19) Fixed bug#5094 - Bulk pending date/time do not get applied to
    tickets.
 - (2010/03/18) Updated Ukrainian language translation, thanks to Belskii Artem!
 - (2010/03/10) Fixed bug#4416 - Merge: whitespace before ticketnumber not removed.
 - (2010/03/09) Fixed bug#5085 - Wrong colours codes in Stats::Graph::dclrs
 - (2010/03/08) Fixed bug#5102 - Notification sent to OTRS instead of Customer
 - (2010/03/04) Fixed bug#5044 - Missing translation in ticket history after
    responsible update.
 - (2010/03/02) Updated Czech translation, thanks to O2BS.com, s r.o. Jakub Hanus!